--- a/part-2/css/styles.css
+++ b/part-2/css/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 img {
-  max-width: 100%;
+  max-width: 25%;
 }
 
 figure {
@@ -25,5 +25,39 @@ figure {
 
 .film {
   width: 50%;
-  margin: 40px auto;
+  margin: 50px auto;
+  overflow: hidden;
+  padding: 10px;
+  border: 1px solid lightgrey;
+  float: none;
+  position: relative;
+}
+
+.film-title {
+  font-size: 30px;
+}
+
+.film-details {
+padding-left: 30%;
+}
+
+.film-poster {
+  float: left;
+  position: absolute;
+  padding-bottom: 5px;
+  width: 110%;
+}
+
+.action-like {
+position: relative;
+float: right;
+color: red;
+}
+
+.action-watch-later {
+  position: absolute;
+  float: left;
+  top: 10px;
+  left: 140px;
+  color: red;
 }
